左右のカラムに分割

--- a/app/views/admin/dashboards/heatmap.html.erb
+++ b/app/views/admin/dashboards/heatmap.html.erb
@@ -1,20 +1,29 @@
 <h1>ルートの表示</h1>
 
-<div id="map" style="height: 600px; width: 100%;"></div>
-<div id="legend" style="padding: 10px; display: flex; align-items: center; gap: 20px; border-top: 1px solid #ccc; margin-top: 5px;">
-  
-  <%# 出発地の凡例 %>
-  <div style="display: flex; align-items: center;">
-    <%= image_tag 'start_marker.svg', width: 16, height: 16 %>
-    <span>出発地</span>
-  </div>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-8">
+      <div id="map" style="height: 600px; width: 100%;"></div>
+      <div id="legend" style="padding: 10px; display: flex; align-items: center; gap: 20px; border-top: 1px solid #ccc; margin-top: 5px;">
+        
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <%= image_tag 'start_marker.svg', width: 16, height: 16 %>
+          <span>出発地</span>
+        </div>
+      
+        <div style="display: flex; align-items: center; gap: 8px;">
+          <%= image_tag 'end_marker.svg', width: 16, height: 16 %>
+          <span>目的地</span>
+        </div>
+      </div>
+    </div>
 
-  <%# 目的地の凡例 %>
-  <div style="display: flex; align-items: center;">
-    <%= image_tag 'end_marker.svg', width: 16, height: 16 %>
-    <span>目的地</span>
+    <div class="col-md-4">
+      <h4>条件選択</h4>
+    </div>
   </div>
 </div>
+
 
 <%= javascript_include_tag "icons.js" %>
 
