--- a/app/views/admin/dashboards/heatmap.html.erb
+++ b/app/views/admin/dashboards/heatmap.html.erb
@@ -27,12 +27,12 @@
 
     <div class="col-md-4">
       <h4>条件選択</h4>
-      <select class="form-select" aria-label="Default select example">
-        <option selected>出発地</option>
-        <option value="1">佐沼高等学校</option>
-        <option value="2">登米総合産業高等学校</option>
-        <option value="3">登米高等学校</option>
-        <option value="4">飛鳥未来きずな高等学校</option>
+      <select class="form-select" data-action="change->map#filter">
+        <option value="all" selected>全ての出発地</option>
+        <option value="佐沼高等学校">佐沼高等学校</option>
+        <option value="登米総合産業高等学校">登米総合産業高等学校</option>
+        <option value="登米高等学校">登米高等学校</option>
+        <option value="飛鳥未来きずな高等学校">飛鳥未来きずな高等学校</option>
       </select>
     </div>
   </div>
