--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#top</h1>
-<p>Find me in app/views/static_pages/top.html.erb</p>
+<h3><%= link_to "交通需要マップ", admin_dashboards_heatmap_path %></h3>
+
+<h3><%= link_to "アンケートフォーム", new_requested_route_path %></h3>
