--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,65 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">
+          <h1>回答者情報登録</h1>
+        </div>
+        <div class="card-body">
+          <%= form_with model: @user, url: users_path, method: :post do |form| %>
+            <% if @user.errors.any? %>
+              <div class="alert alert-danger">
+                <h2>以下の理由により登録できませんでした</h2>
+                <ul>
+                  <% @user.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                  <% end %>
+                </ul>
+              </div>
+            <% end %>
+
+            <div class="mb-3">
+              <label for="user_user_name" class="form-label">ニックネーム<span class="text-danger">*</span></label>
+              <div id="passwordHelpBlock" class="form-text">
+                個人情報が含まれないニックネームを入力してください。
+              </div>
+              <%= form.text_field :user_name, class: "form-control" %>
+            </div>
+
+            <div class="mb-3">
+              <label for="user_password" class="form-label">パスワード<span class="text-danger">*</span></label>
+              <%= form.password_field :password, class: "form-control" %>
+            </div>
+
+            <div class="mb-3">
+              <label for="user_password_confirmation" class="form-label">パスワード（確認）<span class="text-danger">*</span></label>
+              <%= form.password_field :password_confirmation, class: "form-control" %>
+            </div>
+
+            <div class="mb-3">
+              <label for="user_postcode" class="form-label">郵便番号</label>
+              <p id="passwordHelpBlock" class="form-text">
+                居住地域の特定に使用します。ハイフンなしで入力してください。
+              </p>
+              <%= form.text_field :postcode, class: "form-control" %>
+            </div>
+
+            <div class="mb-3">
+              <label for="user_num_of_children" class="form-label">お子様の人数<span class="text-danger">*</span></label>
+              <div id="passwordHelpBlock" class="form-text">
+                このアンケートの対象となる小学校高学年から高校生までのお子様の人数を入力してください。
+              </div>
+              <%= form.number_field :num_of_children, class: "form-control" %>
+            </div>
+
+            <div class="d-grid">
+              <%= form.submit "登録", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
