--- a/app/views/requested_routes/new.html.erb
+++ b/app/views/requested_routes/new.html.erb
@@ -1,5 +1,9 @@
 <div class="container mt-4" data-controller="form-wizard" data-form-wizard-api-key-value="<%= ENV['GOOGLE_MAP_API_KEY'] %>">
   <%= form_with model: @requested_route, url: requested_routes_path, method: :post do |f| %>
+    <div class="mb-3">
+      <%= f.label :subject_id, "対象のお子様を選択", class: "form-label" %>
+      <%= f.select :subject_id, options_from_collection_for_select(@children, :id, :school_name), { prompt: '選択してください' }, class: 'form-select' %>
+    </div>
 
     <%# --- ステップ1: 出発地 --- %>
     <div data-form-wizard-target="step">
