--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,40 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container mt-4">
+  <h1>マイページ</h1>
+
+  <div class="card mb-4">
+    <div class="card-header">
+      登録情報
+    </div>
+    <div class="card-body">
+      <p><strong>ニックネーム:</strong> <%= @user.user_name %></p>
+      <p><strong>郵便番号:</strong> <%= @user.user_profile&.postcode %></p>
+      <p><strong>調査対象者の人数:</strong> <%= @user.user_profile&.num_of_objects %></p>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
+      お子さん情報
+    </div>
+    <div class="card-body">
+      <% if @user.children.any? %>
+        <ul class="list-group">
+          <% @user.children.each_with_index do |child, index| %>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+              <%= (index + 1).to_s + "人目のお子さん: " + child.school_name + " " + child.grade.to_s + "年" %>
+              <%= link_to "編集", edit_user_child_path(@user, child), class: "btn btn-secondary btn-sm" %>
+            </li>
+          <% end %>
+        </ul>
+      <% else %>
+        <p>まだお子さんの情報が登録されていません。</p>
+      <% end %>
+
+      <% if @user.children.count < (@user.user_profile&.num_of_objects || 0) %>
+        <div class="mt-3">
+          <%= link_to "新しいお子さんの情報を登録する", new_user_child_path(@user), class: "btn btn-primary" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
