--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,22 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">ログイン</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">新規登録</a>
-              </li>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <% if logged_in? %>
+                <li class="nav-item">
+                  <%= link_to "マイページ", user_path(current_user), class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "ログアウト", session_path, data: { turbo_method: :delete }, class: "nav-link" %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "ログイン", new_session_path, class: "nav-link" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "新規登録", new_user_path, class: "nav-link" %>
+                </li>
+              <% end %>
             </ul>
           </div>
         </div>
