--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,8 +21,13 @@
         <ul class="list-group">
           <% @user.children.each_with_index do |child, index| %>
             <li class="list-group-item d-flex justify-content-between align-items-center">
-              <%= (index + 1).to_s + "人目のお子さん: " + child.school_name + " " + child.grade.to_s + "年" %>
-              <%= link_to "編集", edit_user_child_path(@user, child), class: "btn btn-secondary btn-sm" %>
+              <div>
+                <%= (index + 1).to_s + "人目のお子さん: " + child.school_name + " " + child.grade.to_s + "年" %>
+              </div>
+              <div>
+                <%= link_to "経路登録", new_requested_route_path(child_id: child.id), class: "btn btn-success btn-sm me-2" %>
+                <%= link_to "編集", edit_user_child_path(@user, child), class: "btn btn-secondary btn-sm" %>
+              </div>
             </li>
           <% end %>
         </ul>
