admin_userログイン機能

--- a/app/views/admin/dashboards/top.html.erb
+++ b/app/views/admin/dashboards/top.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Dashboards#top</h1>
-<p>Find me in app/views/admin/dashboards/top.html.erb</p>
+<div class="p-5 mb-4 bg-body-tertiary rounded-3">
+  <div class="container-fluid py-5">
+    <h1 class="display-5 fw-bold">ようこそ、<%= current_admin_user.user_name %>さん</h1>
+    <p class="col-md-8 fs-4">ここから各種管理機能をご利用ください。</p>
+  </div>
+</div>
