--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,6 +24,11 @@
           </a>
         </li>
         <li class="nav-item px-2">
+          <a class="nav-link" href="<%= admin_surveys_path %>">
+            調査管理
+          </a>
+        </li>
+        <li class="nav-item px-2">
           <a class="nav-link" href="<%= admin_dashboards_heatmap_path %>">
             交通需要マップ
           </a>
