--- a/app/views/admin/questions/index.html.erb
+++ b/app/views/admin/questions/index.html.erb
@@ -9,7 +9,13 @@
 <% if @questions.any? %>
   <ul class="list-group">
     <% @questions.each do |question| %>
-      <li class="list-group-item"><%= question.text %></li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <%= question.text %>
+        <div>
+          <%= link_to "編集", edit_admin_survey_question_path(@survey, question), class: "btn btn-sm btn-outline-secondary" %>
+          <%= link_to "削除", admin_survey_question_path(@survey, question), data: { turbo_method: :delete, turbo_confirm: "この質問と関連する回答も全て削除されます。本当に削除しますか？" }, class: "btn btn-sm btn-outline-danger ms-2" %>
+        </div>
+      </li>
     <% end %>
   </ul>
 <% else %>
