--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,13 @@
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-md-6">
+      <div class="mb-3">
+        <%= link_to "すでに登録済みの方はこちら (ログイン)", new_session_path, class: "btn btn-primary" %>
+      </div>
+      <div class="mb-3">まだ登録がお済でない方は以下のフォームから登録してください。</div>
       <div class="card">
         <div class="card-header">
-          <h1>回答者情報登録</h1>
+          <h2>回答者情報登録</h2>
         </div>
         <div class="card-body">
           <%= form_with model: @user, url: users_path, method: :post do |form| %>
