アンケートの回答の確認・編集機能

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,11 @@
                 <%= link_to "編集", edit_user_child_path(@user, child), class: "btn btn-secondary btn-sm" %>
               </div>
               <div class="mt-2">
-                <%= link_to "アンケートに回答する", new_answer_path(child_id: child.id), class: "btn btn-success btn-sm" %>
+                <% if child.answers.any? %>
+                  <%= link_to "回答を確認・編集する", edit_answer_path(child_id: child.id), class: "btn btn-secondary btn-sm" %>
+                <% else %>
+                  <%= link_to "アンケートに回答する", new_answer_path(child_id: child.id), class: "btn btn-success btn-sm" %>
+                <% end %>
               </div>
               <div class="mt-2">
                 <%= link_to "移動経路の登録", new_requested_route_path(child_id: child.id), class: "btn btn-success btn-sm" %>
